--- a/.env
+++ b/.env
@@ -26,8 +26,8 @@ APP_SECRET=83741a0f453f8518121ef05f46534318
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
-DATABASE_URL=mysql://symfony_user:password@127.0.0.1:3306/test_db
-
+DATABASE_URL=mysql://symfony_user:StrongPassword123!@127.0.0.1:3306/test_db
+#StrongPassword123!
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
